--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Part 1 Exercise 1
 body {
   margin: 0;
   border: 5px solid black;
@@ -38,3 +39,48 @@ body {
   top: 50px;
   left: 50px;
 }
+*/
+
+body {
+  margin: 0;
+  border: 5px solid black;
+  height: 100vh;
+  position: relative;
+}
+
+.one {
+  width: 400px;
+  height: 400px;
+  background-color: red;
+  position: relative;
+}
+
+.two {
+  width: 300px;
+  height: 300px;
+  background-color: yellow;
+  position: relative;
+  top: 0px;
+  left: 0px;
+}
+
+.three {
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  position: relative;
+  top: 0px;
+  left: 0px;
+}
+
+.four {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  position: fixed;
+  top: 5px;
+  right: 5px;
+}
+
+
+
