--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 }
 */
 
+/* Problem 1 Exercise 2
 body {
   margin: 0;
   border: 5px solid black;
@@ -80,6 +81,47 @@ body {
   position: fixed;
   top: 5px;
   right: 5px;
+}
+*/
+
+body {
+  margin: 0;
+  border: 5px solid black;
+  height: 100vh;
+  position: relative;
+}
+
+.one {
+  width: 400px;
+  height: 400px;
+  background-color: red;
+  position: relative;
+}
+
+.two {
+  width: 300px;
+  height: 300px;
+  background-color: yellow;
+  position: relative;
+  top: 0px;
+  left: 0px;
+}
+
+.three {
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  position: relative;
+  top: 200px;
+  left: 400px;
+}
+
+.four {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  position: absolute;
+  top: 100px;
 }
 
 
