--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ body {
 }
 */
 
+/* Problem 1 Exercise 3
 body {
   margin: 0;
   border: 5px solid black;
@@ -123,6 +124,47 @@ body {
   position: absolute;
   top: 100px;
 }
+*/
 
+body {
+  margin: 0;
+  border: 5px solid black;
+  height: 100vh;
+  position: relative;
+}
+
+.one {
+  width: 400px;
+  height: 400px;
+  background-color: red;
+  position: relative;
+}
+
+.two {
+  width: 300px;
+  height: 300px;
+  background-color: yellow;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+}
+
+.three {
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  position: relative;
+  top: -100px;
+  left: -100px;
+}
+
+.four {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  position: relative;
+  top: 100px;
+  left: 100px;
+}
 
 
